--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        	  <h2 class="title">About Me</h2>
        	  <div class="about-content">
        	  	  <div class="img">
-       	  	  	 <img src="nishant.jpg" alt="me">
+       	  	  	 <img src="Images/mypic.jpg" alt="me">
        	  	  </div>
        	  	  <div class="description">
        	  	  	  <h4>Hi, I'm Nishant  </h4>
